namespace Tricycle
{
    public interface IWheelRotatable
    {
        void Rotate(float rotateSpeed);
    }
}